--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
   },
   "devDependencies": {
     "babel-loader": "^6.2.8",
+    "css-loader": "^0.26.1",
     "http-server": "^0.9.0",
-    "webpack": "^1.13.3"
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   }
 }
